--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.14.0",
+    "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.2.1",
+    "@mui/lab": "^6.0.0-beta.20",
     "@mui/material": "^6.2.1",
     "@mui/material-nextjs": "^6.2.1",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.47.10",
+    "axios": "^1.7.9",
     "next": "15.1.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/grecaptcha": "^3.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
