--- a/package.json
+++ b/package.json
@@ -9,22 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/cache": "^11.14.0",
-    "@emotion/react": "^11.14.0",
-    "@emotion/server": "^11.11.0",
-    "@emotion/styled": "^11.14.0",
     "@hookform/resolvers": "^3.9.1",
-    "@mui/icons-material": "^6.2.1",
-    "@mui/lab": "^6.0.0-beta.20",
-    "@mui/material": "^6.2.1",
-    "@mui/material-nextjs": "^6.2.1",
     "@supabase/ssr": "^0.5.2",
     "@supabase/supabase-js": "^2.47.10",
     "axios": "^1.7.9",
+    "clsx": "^2.1.1",
     "next": "15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.4.0",
+    "tailwind-merge": "^2.6.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
@@ -33,8 +28,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.2",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
