--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@supabase/supabase-js": "^2.47.10",
     "@tiptap/extension-image": "^2.11.0",
     "@tiptap/extension-link": "^2.11.0",
+    "@tiptap/extension-placeholder": "^2.11.0",
     "@tiptap/html": "^2.11.0",
     "@tiptap/pm": "^2.11.0",
     "@tiptap/react": "^2.11.0",
